yt-nosubs.user.css
/* ==UserStyle==
@name           Hide statistics from YouTube
@version        1.1.19
@namespace      https://github.com/vignedev/userscripts
@description    Hides view and sub counts from YouTube
@author         vignedev
@preprocessor   stylus
@var checkbox   hideGameInfo "Hide Game info" 1
@var checkbox   hideLikes "Hide Likes" 1
@var checkbox   hideDownloadButton "Hide Download Button" 1
@var checkbox   hideShareButton "Hide Share Button" 1
@var checkbox   hideThanksButton "Hide Thanks Button" 1
@var checkbox   hideClipButton "Hide Clip Button" 1
@var checkbox   hideCreateButton "Hide Create Button" 1
@var checkbox   hideCountryCode "Hide Country Code from YouTube logo" 1
@var checkbox   hideVoiceSearch "Hide Voice Search button" 1
@var checkbox   hideGuide "Hides the guide" 1
@var checkbox   hideLiveChat "Hides the live chat (and button)" 1
@var checkbox   hideWatchNextCategories "Hide Watch Next categories" 1
==/UserStyle== */

@-moz-document domain("youtube.com") {
    #thumbnail-attribution, #owner-sub-count, #subscriber-count, #video-count, #metadata #subscribers, #metadata > #dot,
    .ytp-videowall-still-info-author,
    .ytd-video-view-count-renderer,
    div:not(.ytd-compact-playlist-renderer) #metadata-line.ytd-video-meta-block > *:first-child,
    div:not(.ytd-compact-playlist-renderer) #metadata-line.ytd-grid-video-renderer > *:first-child,
    #metadata-line .inline-metadata-item:first-of-type,
    #metadata-line.ytd-video-meta-block>.ytd-video-meta-block:not(:first-of-type):before,
    yt-formatted-string#info > span:nth-child(1),
    yt-formatted-string#info > span:nth-child(2),
    yt-formatted-string#video-info > span:nth-child(1),
    yt-formatted-string#video-info > span:nth-child(2),
    #header-text > .ytd-video-description-infocards-section-renderer#subtitle,
    #view-count, .view-count,
    /* (todo: this hid the recently uploaded text as well - is this still used?) yt-animated-rolling-number.animated-rolling-number-wiz, */
    #segmented-like-button span[role="text"],
    /* hide view from videos */
    yt-content-metadata-view-model > div.yt-content-metadata-view-model-wiz__metadata-row--metadata-row-inline:last-child > span:first-child,
    yt-content-metadata-view-model > div.yt-content-metadata-view-model-wiz__metadata-row:last-child > span:first-child,
    yt-content-metadata-view-model > div.yt-content-metadata-view-model-wiz__metadata-row:last-child > .yt-content-metadata-view-model-wiz__delimiter,
    yt-content-metadata-view-model > div.yt-content-metadata-view-model-wiz__metadata-row--metadata-row-inline:last-child > .yt-content-metadata-view-model-wiz__delimiter,
    /* hide views in videos which have the New badge*/
    yt-content-metadata-view-model:has(yt-badge-view-model) > div.yt-content-metadata-view-model-wiz__metadata-row--metadata-row-inline:nth-child(2) > span:first-child,
    yt-content-metadata-view-model:has(yt-badge-view-model) > div.yt-content-metadata-view-model-wiz__metadata-row:nth-child(2) > span:first-child,
    yt-content-metadata-view-model:has(yt-badge-view-model) > div.yt-content-metadata-view-model-wiz__metadata-row:nth-child(2) > .yt-content-metadata-view-model-wiz__delimiter,
    yt-content-metadata-view-model:has(yt-badge-view-model) > div.yt-content-metadata-view-model-wiz__metadata-row--metadata-row-inline:nth-child(2) > .yt-content-metadata-view-model-wiz__delimiter,
    yt-content-metadata-view-model > div.yt-content-metadata-view-model__metadata-row:nth-of-type(2) > span:nth-child(1),
    yt-content-metadata-view-model > div.yt-content-metadata-view-model__metadata-row:nth-of-type(2) > .yt-content-metadata-view-model__delimiter,
    /* endscreen subscriber count */
    .ytp-ce-channel-subscribers-text,
    .style-scope.ytd-grid-video-renderer:before,
    /* endscreen view counter */
    .ytp-modern-videowall-still-view-count-and-date-info, /* [n] views - [date], unfortunately hides the date too */
    /* hide views on watch-history */
    yt-lockup-metadata-view-model > div.yt-lockup-metadata-view-model__text-container yt-content-metadata-view-model > div:nth-child(1) > span:not(:first-child),
    /* 4th april views are broken again on main page */
    .ytContentMetadataViewModelMetadataRow:has(.ytContentMetadataViewModelDelimiter) > span:nth-child(1),
    .ytContentMetadataViewModelMetadataRow:has(.ytContentMetadataViewModelDelimiter) > .ytContentMetadataViewModelDelimiter,
    .shortsLockupViewModelHostOutsideMetadataSubhead.shortsLockupViewModelHostMetadataSubhead,
    .yt-lockup-view-model:has(.yt-badge-shape--thumbnail-live) yt-content-metadata-view-model > .ytContentMetadataViewModelMetadataRow:nth-child(2),
    .ytLockupViewModelHost:has(.ytBadgeShapeThumbnailLive) yt-content-metadata-view-model > .ytContentMetadataViewModelMetadataRow:nth-child(2)
    {
        display: none !important;
        content: unset !important;
    }

    if hideGameInfo {
        .style-scope.ytd-metadata-row-container-renderer{
            display: none !important;
        }
    }

    if hideLikes {
        #segmented-like-button .cbox.yt-spec-button-shape-next--button-text-content,
        #segmented-like-button .cbox.yt-spec-button-shape-next__button-text-content,
        button.yt-spec-button-shape-next[aria-label*="like"] .yt-spec-button-shape-next__button-text-content
        #vote-count-middle,
        like-button-view-model span[role="text"],
        dislike-button-view-model span[role="text"],
        .ytSpecButtonShapeNextButtonTextContent:has(>.animatedRollingNumberHost){
            display: none !important;
        }
        #segmented-like-button .yt-spec-button-shape-next__icon,
        button.yt-spec-button-shape-next[aria-label*="like"] .yt-spec-button-shape-next__icon,
        .ytLikeButtonViewModelHost .ytSpecButtonShapeNextIcon{
            margin-right: 0 !important;
            margin-left: 0 !important;
        }
    }

    if hideDownloadButton {
        ytd-download-button-renderer:has(button[aria-label="Download"]) { display: none !important; }
    }

    if hideShareButton {
        yt-button-view-model:has(button[aria-label="Share"]) { display: none !important; }
    }

    if hideThanksButton {
        yt-button-view-model:has(button[aria-label="Thanks"]) { display: none !important; }
    }

    if hideClipButton {
        yt-button-view-model:has(button[aria-label="Clip"]) { display: none !important; }
    }


    /* Toolbar */
    if hideCreateButton {
        yt-button-shape:has(button[aria-label="Create"]) { display: none !important; }
    }

    if hideCountryCode {
        span#country-code{ display: none !important; }
    }

    if hideVoiceSearch {
        #voice-search-button { display: none !important; }
    }

    /* Homepage sidebar */
    if hideGuide {
        ytd-mini-guide-renderer[role="navigation"] { display: none !important; }
        ytd-page-manager#page-manager { margin-left: 0 !important; }
    }

    if hideLiveChat {
        ytd-live-chat-frame#chat, .ytd-live-chat-frame#show-hide-button { display: none !important; }
    }

    /* Watch Next */
    if hideWatchNextCategories {
      ytd-watch-next-secondary-results-renderer > #items > yt-related-chip-cloud-renderer {
        display: none !important;
      }
    }
}

